--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "dompurify": "^3.1.6",
     "i18next": "^23.13.0",
+    "nodemailer": "^6.9.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.1",
